Add testfx jmockit logger and some tests