@@ -67,11 +67,6 @@
 			<version>1.9.4</version>
 		</dependency>
 		<dependency>
-			<groupId>javax.annotation</groupId>
-			<artifactId>javax.annotation-api</artifactId>
-			<version>1.3.2</version>
-		</dependency>
-		<dependency>
 			<groupId>jakarta.xml.bind</groupId>
 			<artifactId>jakarta.xml.bind-api</artifactId>
 			<version>3.0.0</version>
@@ -162,6 +157,62 @@
 			<groupId>com.tngtech.archunit</groupId>
 			<artifactId>archunit-junit5</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jersey.core</groupId>
+			<artifactId>jersey-common</artifactId>
+			<version>3.0.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.weld.se</groupId>
+			<artifactId>weld-se-shaded</artifactId>
+			<version>4.0.3.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jboss.weld</groupId>
+			<artifactId>weld-junit5</artifactId>
+			<version>4.0.0.Final</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>jakarta.annotation</groupId>
+			<artifactId>jakarta.annotation-api</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-core</artifactId>
+			<version>4.0.16-alpha</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>4.0.16-alpha</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>openjfx-monocle</artifactId>
+			<version>jdk-12.0.1+2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>1.49</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.3.0-alpha16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>2.0.0-alpha7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -199,6 +250,29 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>
+						--add-opens fx/org.unigrid.janus=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.controller=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.controller.component=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.model=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.model.producer=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.model.service=ALL-UNNAMED
+						--add-opens fx/org.unigrid.janus.view=ALL-UNNAMED
+						--add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.cdi=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.controller.component=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.model=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.model.producer=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.model.service=ALL-UNNAMED
+						--add-exports fx/org.unigrid.janus.model.service.external=jersey.client
+						--add-exports fx/org.unigrid.janus.model.external=jersey.common
+						--add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+						--add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+						--add-exports javafx.graphics/com.sun.glass.ui.delegate=ALL-UNNAMED
+						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
+					</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
